[package]
name = "bevy_learn"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.9"
directories = "4"
tch = "0.9"
tch_distr = { git = "https://github.com/paholg/tch-distr-rs", branch = "update-tch-0.9.0" }
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
bevy_rapier2d = "0.19"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "cartpole"