[package]
name = "learnit"
version = "0.1.0"
edition = "2021"

[dependencies]
dfdx = { git = "https://github.com/coreylowman/dfdx" }
rand = "0.8"
tracing = "0.1.37"
typed-builder = "0.11"

[dev-dependencies]
bevy = "0.9"
bevy_rapier2d = "0.19"
clap = { version = "4", features = ["derive"] }
rand = "0.8"

[[example]]
name = "cartpole"

[[example]]
name = "move_to_target"
